--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class="middle-container">
   <div class="profile">
-    <img class="profile-pic" src="images/profile.jpg" alt="profile-img">
+    <img class="profile-pic" src="images/profile.png" alt="profile-img">
     <h2>Hello.</h2>
     <p class="self-desc">I am Siddhartha Sipani, a computer science and engineering student. I am learning to develop websites, and I love to write!</p>
   </div>
